2008-07-29  Aaron Bockover  <abock@gnome.org>

	* gstreamer/equalizer/Makefile.am: -lm

	* src/Backends/Banshee.NowPlaying.X11/libbnpx11/Makefile.am: -lXrandr

2008-07-29  Bertrand Lorentz  <bertrand.lorentz@gmail.com>

	* src/Core/Banshee.Services/Banshee.Collection.Database/DatabaseAlbumInfo.cs:
	* src/Core/Banshee.Services/Banshee.Collection.Database/DatabaseArtistInfo.cs:
	* src/Core/Banshee.Services/Banshee.Sources/PrimarySource.cs: Reset the
	fields about the last artist and last album imported when the artists 
	and albums are pruned from the DB.

2008-07-29  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Extensions/Banshee.Daap/Banshee.Daap/DaapService.cs: Catch
	exceptions caused by not having any DAAP backends (avahi, etc).

2008-07-29  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Core/Banshee.Services/Banshee.Query/BansheeQuery.cs: Shorten track
	and title query labels.

2008-07-29  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Core/Banshee.ThickClient/Banshee.Gui/PlaybackActions.cs: Fix bug
	where IsLive tracks wouldn't change the play icon to stop (BGO #539021).

2008-07-29  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Core/Banshee.Services/Banshee.Collection.Database/DatabaseTrackListModel.cs:
	Make UpdateUnfilteredAggregates virtual, expose UnfilteredCount setter and
	Connection via protected properties.

	* src/Extensions/Banshee.Podcasting/Banshee.Podcasting.Data/PodcastTrackListModel.cs:
	Use the above changes to show the # of new podcast items in the
	SourceView, instead of the total # of items.

2008-07-29  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* src/Clients/Nereid/Nereid/ViewContainer.cs: Added
	translator comment.

2008-07-28  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Core/Banshee.ThickClient/Resources/core-ui-actions-layout.xml:
	* src/Core/Banshee.ThickClient/Banshee.Gui/ViewActions.cs: Comment out
	Show Cover Art menu item/action.

2008-07-27  Gabriel Burt  <gabriel.burt@gmail.com>
